--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 /* VARIABLES */
 :root {
+    --mx-width: 1320px;
     --color-text-body: #525260;
     --color-primary: #5956e9;
     --color-secondary: #fff;
@@ -9,6 +10,7 @@
     --color-subtitle: #c75c6f;
     --color-title: #292930;
     --color-bg-service: #f8f8f8;
+    --color-bg-projects: #ecf2f6;
 }
 
 /* ESTILOS GENERALES */
@@ -344,7 +346,7 @@ body {
 }
 
 .services__grid {
-    max-width: 1320px;
+    max-width: var(--mx-width);
     margin: 0 auto;
 }
 
@@ -353,14 +355,16 @@ body {
     margin-bottom: 2rem;
 }
 
-.services__subtitle {
+.services__subtitle,
+.projects__subtitle {
     font-size: 2rem;
     font-weight: 500;
     color: var(--color-subtitle);
     margin-bottom: 1.5rem;
 }
 
-.services__title {
+.services__title,
+.projects__title {
     font-size: 6.7rem;
     font-weight: 500;
     line-height: 1.2;
@@ -482,5 +486,116 @@ body {
 
 .service-shapes--shape3 {
     top: 34%;
+    left: 5%;
+}
+
+/* ESTILOS DE PROYECTOS */
+.layout__projects {
+    position: relative;
+    background-color: var(--color-bg-projects);
+    padding: 14rem 10rem;
+    z-index: 1;
+}
+
+.projects__grid {
+    max-width: var(--mx-width);
+    margin: 0 auto;
+}
+
+.projects__header {
+    margin-bottom: 4rem;
+}
+
+.projects__subtitle {
+    text-transform: capitalize;
+}
+
+.projects__categories {
+    margin-bottom: 5.5rem;
+    display: flex;
+    flex-direction: row;
+    gap: 7rem;
+}
+
+.categories__item {
+    position: relative;
+    font-size: 2rem;
+    font-weight: 500;
+    cursor: pointer;
+    padding: 0.8rem 0;
+    transition: all 100ms linear;
+}
+
+.categories__item--active,
+.categories__item:hover {
+    border-bottom: 3px solid var(--color-primary);
+}
+
+.projects__all {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem 7rem;
+}
+
+.project__container-img {
+    width: 100%;
+    border-radius: 30px 30px 0 0;
+    overflow: hidden;
+}
+
+.project__img {
+    width: 100%;
+    transition: all 800ms ease-in-out;
+}
+
+.projects__project:hover .project__img {    
+    transform: scale(1.2);
+}
+
+.project__content {
+    background-color: var(--color-secondary);
+    padding: 4rem 5rem;
+    border-radius: 0 0 30px 30px;
+}
+
+.project__title {
+    font-size: 3.2rem;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+    font-weight: 500;   
+}
+
+.project__link-title {
+    color: var(--color-title);
+    transition: all 300ms ease-in-out;
+}
+
+.project__link-title:hover {
+    color: var(--color-banner);
+}
+
+.project__tags {
+    font-size: 1.7rem;
+}
+
+.project-shapes__item {
+    position: absolute;
+    z-index: -1;
+    pointer-events: none;    
+}
+
+.project-shapes--shape1 {
+    top: 4%;
+    right: 11%;    
+}
+
+.project-shapes--shape2 {
+    top: 8%;
+    right: 35%;
+}
+
+.project-shapes--shape3 {
+    top: 38%;
     left: 5%;
 }
