--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,9 @@
     --color-title: #292930;
     --color-bg-service: #f8f8f8;
     --color-bg-projects: #ecf2f6;
+    --color-bg-dark: #27272E;
+    --color-text-description: #99A1AA;
+    --color-hover-dark: #303035;
 }
 
 /* ESTILOS GENERALES */
@@ -276,8 +279,8 @@ body {
 .shapes__item--shape3 {
     top: 34%;
     left: 50%;
-    animation: moveShape3 20s infinite;
-}
+    animation: moveShape3 20s infinite;    
+}                    
 
 @keyframes moveShape3 {
     0% { transform: translateX(0) translateY(0); }
@@ -356,7 +359,8 @@ body {
 }
 
 .services__subtitle,
-.projects__subtitle {
+.projects__subtitle,
+.stats__subtitle {
     font-size: 2rem;
     font-weight: 500;
     color: var(--color-subtitle);
@@ -364,7 +368,8 @@ body {
 }
 
 .services__title,
-.projects__title {
+.projects__title,
+.stats__title {
     font-size: 6.7rem;
     font-weight: 500;
     line-height: 1.2;
@@ -598,4 +603,78 @@ body {
 .project-shapes--shape3 {
     top: 38%;
     left: 5%;
+}
+
+/* ESTILOS PARA ESTADISTICAS */
+.layout__stats {
+    background-color: var(--color-bg-dark);
+    padding: 14rem 11rem;
+}
+
+.stats__container {
+    max-width: var(--mx-width);
+    margin: 0 auto;
+}
+
+.stats__header {
+    text-align: center;
+}
+
+.stats__title {
+    color: var(--color-secondary);
+    font-size: 6.5rem;
+    margin-bottom: 3rem;
+}
+
+.stats__description {
+    font-size: 2rem;
+    width: 60%;
+    margin: 0 auto;
+    margin-bottom: 4rem;
+    color: var(--color-text-description);
+}
+
+.stats__progress {
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
+}
+
+.stats__stat {
+    width: 25%;
+    text-align: center;
+    padding: 7rem 2rem;
+    border-radius: 2rem;
+    border: 1px solid transparent;
+}
+
+.stats__stat:hover {
+    background: linear-gradient(180deg, var(--color-bg-dark), var(--color-hover-dark));
+    border: 1px solid var(--color-hover-dark);
+}
+
+.stat__icon {
+    margin-bottom: 2rem;
+}
+
+.stat__icon>img {
+    display: inline-block;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.stat__count {
+    display: inline-block;
+    font-size: 6.4rem;
+    font-weight: 500;
+    line-height: 1.2;
+    color: var(--color-primary);
+    margin-bottom: 0.5rem;
+}
+
+.stat__title {
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 1.2;
+    color: var(--color-secondary);
 }
