CSS Clients y News

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,7 @@
     --color-bg-dark: #27272E;
     --color-text-description: #99A1AA;
     --color-hover-dark: #303035;
+    --color-borders: #e3e6e9;
 }
 
 /* ESTILOS GENERALES */
@@ -361,7 +362,9 @@ body {
 .services__subtitle,
 .projects__subtitle,
 .stats__subtitle,
-.reviews__subtitle {
+.reviews__subtitle,
+.clients__subtitle,
+.news__subtitle {
     font-size: 2rem;
     font-weight: 500;
     color: var(--color-subtitle);
@@ -371,7 +374,8 @@ body {
 .services__title,
 .projects__title,
 .stats__title,
-.reviews__title {
+.reviews__title,
+.news__title {
     font-size: 6.7rem;
     font-weight: 500;
     line-height: 1.2;
@@ -608,12 +612,14 @@ body {
 }
 
 /* ESTILOS PARA ESTADISTICAS */
-.layout__stats {
+.layout__stats,
+.layout__clients {
     background-color: var(--color-bg-dark);
-    padding: 14rem 11rem;
+    padding: 14rem 10rem;
 }
 
-.stats__container {
+.stats__container,
+.clients__container {
     max-width: var(--mx-width);
     margin: 0 auto;
 }
@@ -622,13 +628,15 @@ body {
     text-align: center;
 }
 
-.stats__title {
+.stats__title,
+.clients__title {
     color: var(--color-secondary);
     font-size: 6.5rem;
     margin-bottom: 3rem;
 }
 
-.stats__description {
+.stats__description,
+.clients__description {
     font-size: 2rem;
     width: 60%;
     margin: 0 auto;
@@ -699,7 +707,8 @@ body {
     margin-bottom: 6rem;
 }
 
-.reviews__description {
+.reviews__description,
+.news__description {
     margin: 3rem 0;
     width: 50%;
     font-size: 2rem;
@@ -766,3 +775,191 @@ body {
     top: 17%;
     right: 26%;
 }
+
+/* ESTILOS PARA MEJORES CLIENTES */
+.layout__clients {
+    position: relative;
+    z-index: 1;
+    padding-bottom: 12rem;
+}
+
+.clients__header {
+    text-align: left;
+}
+
+.clients__title {
+    width: 50%;
+    line-height: 1.2;
+    font-weight: 500;
+}
+
+.clients__description {
+    margin: 0;
+    width: 40%; 
+    margin-bottom: 6rem;   
+}
+
+.clients__logos {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 3rem;
+}
+
+.clients__item {
+    width: calc(25% - 3rem);
+}
+
+.clients__img {
+    filter: grayscale(100%);
+    opacity: 0.3;
+    transition: all 300ms ease-in-out;
+}
+
+.clients__item:hover > .clients__img {
+    filter: grayscale(0);
+    opacity: 1;
+    cursor: pointer;
+}
+
+.client-shapes__item {
+    position: absolute;
+    z-index: -1;
+    top: 10rem;
+    right: 0;
+}
+
+/* ESTILOS PARA NOTICIAS */
+.layout__news {
+    position: relative;
+    z-index: 1;
+    padding: 14rem 0;
+}
+
+.news__container {
+    max-width: var(--mx-width);
+    margin: 0 auto;
+}
+
+.news__header {
+    text-align: center;
+    margin-bottom: 6rem;
+}
+
+.news__title {
+    margin-bottom: 3rem;
+}
+
+.news__description {
+    text-align: center;
+    margin: 0 auto;
+}
+
+.news__list {
+    display: flex;
+}
+
+.news__new {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    padding-right: 2rem;
+    padding-left: 0;
+    border-top: 1px solid var(--color-borders);
+    border-bottom: 1px solid var(--color-borders);
+    transition: all 300ms ease-in-out;
+}
+
+.news__new:hover {
+    border-top-color: var(--color-primary);
+}
+
+.news__new:last-child {
+    border-left: 1px solid var(--color-borders);
+    padding-left: 2.5rem;
+}
+
+.new__container-img {
+    overflow: hidden;
+    border-radius: 3rem;
+}
+
+.new__img {
+    border-radius: 3rem;
+    transition: all 300ms ease-in-out;
+}
+
+.news__new:hover .new__img {
+    transform: scale(1.1);
+}
+
+.new__content {
+    flex-basis: 50%;
+}
+
+.new__title {
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 1.4;
+    margin-bottom: 2rem;    
+}
+
+.new__link {
+    color: var(--color-title);
+    transition: all 300ms ease-in-out;
+}
+
+.new__link:hover,
+.new__more:hover {
+    color: var(--color-primary);
+}
+
+.new__description {
+    font-size: 1.7rem;
+    font-weight: normal;
+    color: var(--color-text-description);
+    margin-bottom: 3rem;
+}
+
+.new__more {
+    display: inline-block;
+    font-size: 1.7;
+    font-weight: 700;
+    color: var(--color-hover-dark);
+    transition: all 300ms ease-in-out;        
+}
+
+.new__icon {
+    font-size: 1.3rem;
+    vertical-align: middle;
+}
+
+.new-shapes__item {
+    position: absolute;
+    z-index: -1;
+}
+
+.new-shapes--shape1 {
+    top: 14rem;
+    left: 31.5rem;
+}
+
+.new-shapes--shape2 {
+    top: 12rem;
+    right: 0;
+}
+
+.new-shapes--shape3 {
+    bottom: 8rem;
+    left: 0;
+}
+
+.new-shapes--shape4 {
+    bottom: 6rem;
+    right: 16rem;
+}
+
+
+
