--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,6 +54,17 @@ body {
     align-items: center;
 }
 
+.menu__navbar--fixed {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 9;
+    background-color: var(--color-secondary);
+    box-shadow: 0px 2px 10px 0 rgba(0, 0, 0, 10%);
+    padding: 1.5rem 8rem;
+}
+
 .navbar__logo {
     width: 187px;
 }
@@ -1347,13 +1358,12 @@ body {
     margin-right: -1rem;
 }
 
-.menu-mobile {
-    display: none;
-    visibility: visible;
-    opacity: 1;
+.menu-mobile {    
+    visibility: hidden;
+    opacity: 0;
     position: fixed;
     top: 0;
-    left: 0;
+    left: -300px;
     z-index: 10;
     width: 30rem;
     height: 100%;
@@ -1362,7 +1372,13 @@ body {
     padding-top: 0;
     box-shadow: 0px 0px 85px -35px rgba(0,0,0, 0.5);
     overflow-y: auto;
-    transition: all 800ms ease-in-out;
+    transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.menu-mobile--show {
+    visibility: visible;
+    opacity: 1;
+    left: 0;
 }
 
 .menu-mobile__header {
@@ -1422,10 +1438,10 @@ body {
 }
 
 .menu-mobile__submenu-mobile {
-    display: block;
+    display: none;
     visibility: visible;
     opacity: 1;
-    min-height: 100%;
+    min-width: 100%;
     padding: 0;
     padding-bottom: 1rem;
 }
