--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -748,7 +748,7 @@ body {
 .review__description {
     font-size: 2.4rem;
     line-height: 1.2;
-    color: var(--color-bg-dark);
+    color: var(--color-text-description);
     margin-bottom: 4rem;
 }
 
@@ -772,7 +772,7 @@ body {
     display: block;
     font-size: 1.7rem;
     font-weight: bold;
-    color: var(--color-bg-dark);
+    color: var(--color-text-description);
     margin-bottom: 0.3rem;
 }
 
@@ -940,7 +940,7 @@ body {
 
 .new__more {
     display: inline-block;
-    font-size: 1.7;
+    font-size: 1.7rem;
     font-weight: 700;
     color: var(--color-hover-dark);
     transition: all 300ms ease-in-out;        
@@ -1454,4 +1454,35 @@ body {
     text-transform: capitalize;
     font-weight: 500;
     color: var(--color-text-body);
+}
+
+/* ESTILOS BOTON MODO OSCURO */
+.switcher {
+    position: fixed;
+    top: 20rem;
+    left: 0;
+    background-color: var(--color-primary);
+    border-radius: 0 3rem 3rem 0;
+    padding: 1rem;
+    z-index: 5;    
+}
+
+.switcher__btn {
+    background-color: transparent;
+    border: none;
+    display: flex;
+    cursor: pointer;
+}
+
+.switcher__icon-light,
+.switcher__icon-dark {
+    color: var(--color-secondary);
+    font-size: 1.8rem;
+    height: 4rem;
+    width: 4rem;
+    line-height: 4rem;
+}
+
+.switcher__icon-dark {
+    display: none;
 }
